# kja

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
bench/: CMakeLists.txt  bench.capnp  bench.capnp.c++  bench.capnp.h  server.cpp
include/kja/: async-io.h  async.h  capnproto.h  kja.h
test/: CMakeLists.txt  server.cpp  test.capnp  test.capnp.c++  test.capnp.h
